<resources>
    <string name="app_name">SHMS</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="already_have_an_account">Already have\nan Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="login_image">Login Image</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="use_other_method">Use other method</string>
    <string name="side_bar">Side Bar</string>
    <string name="new_account">New Account</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="already">Already Have an account?</string>
    <string name="provide_your_account_details_for_which_you_want_to_reset_password">Provide your account details for which you want to reset password!</string>
    <string name="next">Next</string>
    <string name="make_selection">Make Selection</string>
    <string name="select_one_to_reset_your_password">Select one to reset your password</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via mail:</string>
    <string name="co">CO</string>
    <string name="verification">VERIFICATION</string>
    <string name="verify_code">Verify Code</string>
    <string name="info">Here\'s\nyour first\nstep with\nus</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_name">User Name</string>
    <string name="health_card">Health Card</string>
    <string name="temperature">Temperature</string>
    <string name="none">-- --</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="sugar">Sugar</string>
    <string name="heart_monitoring">heart_monitoring</string>
    <string name="health_n_monitoring">Health \n Monitoring</string>
    <string name="heart_attack">Heart Attack</string>
    <string name="diabetes">Diabetes</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="date">Date</string>
    <string name="result">Result</string>
    <string name="tonsil_n_report">Tonsil \n Report</string>
    <string name="reports">Reports</string>
    <string name="setting">Setting</string>
    <string name="suggestion">Suggestion</string>
    <string name="enter_one_time_otp_sent_on">Enter one time OTP sent on</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="help">Help and About Us</string>
    <string name="change_your_npassword">Change your\npassword</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="tonsil_report">Tonsil Report</string>
</resources>
