<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterView"
    android:layout_gravity="center"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/change_your_npassword"
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_login_hero" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:padding="30dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/old_pass_lay"
                        style="@style/modifiedEditText"
                        android:padding="5dp"
                        app:startIconDrawable="@drawable/ic_lock_24">

                        <EditText
                            android:id="@+id/old_pass"
                            style="@style/modifiedEditText"
                            android:layout_height="60dp"
                            android:hint="@string/old_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/modifiedEditText"
                        android:padding="5dp"
                        app:startIconDrawable="@drawable/ic_lock_24">

                        <EditText
                            android:id="@+id/new_pass"
                            style="@style/modifiedEditText"
                            android:layout_height="60dp"
                            android:hint="@string/new_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/modifiedEditText"
                        android:padding="5dp"
                        app:startIconDrawable="@drawable/ic_lock_24">

                        <EditText
                            android:id="@+id/retype_pass"
                            style="@style/modifiedEditText"
                            android:layout_height="60dp"
                            android:hint="@string/retype_new_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/change"
                        style="@style/loginButton"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/change_password"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>