<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterView"
    android:layout_gravity="center"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/info"
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_login_hero" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/modifiedEditText"
                        app:startIconDrawable="@drawable/ic_person_24"
                        android:padding="5dp">

                        <EditText
                            android:id="@+id/reg_name"
                            style="@style/modifiedEditText"
                            android:layout_height="60dp"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/modifiedEditText"
                        app:startIconDrawable="@drawable/ic_baseline_email_24"
                        android:padding="5dp">

                        <EditText
                            android:id="@+id/reg_email"
                            style="@style/modifiedEditText"
                            android:layout_height="60dp"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/modifiedEditText"
                        android:padding="5dp"
                        app:startIconDrawable="@drawable/ic_lock_24">

                        <EditText
                            android:id="@+id/reg_pass"
                            style="@style/modifiedEditText"
                            android:layout_height="60dp"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/reg_dob"
                        style="?android:spinnerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="5dp"
                        android:text="JUL 26 1999"
                        android:textSize="8pt" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <RadioButton
                            android:id="@+id/reg_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:textSize="8pt" />

                        <RadioButton
                            android:id="@+id/reg_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Female"
                            android:textSize="8pt" />

                        <RadioButton
                            android:id="@+id/reg_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="Other"
                            android:textSize="8pt" />
                    </RadioGroup>

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/register"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                    <TextView
                        android:id="@+id/already"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/already"
                        android:textAlignment="center"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>