<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VerifyOTP">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/co"
                android:textColor="#000000"
                android:textSize="120sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-40dp"
                android:text="DE"
                android:textColor="#000000"
                android:textSize="120sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-20dp"
                android:text="@string/verification"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/enter_one_time_otp_sent_on"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/OTP1"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryTextColor"
                    android:inputType="number"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/OTP2"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryTextColor"
                    android:inputType="number"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/OTP3"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryTextColor"
                    android:inputType="number"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/OTP4"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryTextColor"
                    android:inputType="number"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/OTP5"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryTextColor"
                    android:inputType="number"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/OTP6"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryTextColor"
                    android:inputType="number"
                    android:maxLength="1" />
            </LinearLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/cirRegisterButton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/verify_code"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>